# mergetyp

./: .gitignore  LICENSE  PLAN.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
examples/certificate/: README.md  data.csv  template.typ
examples/invoice/: data.json  template.typ
src/mergetyp/: __init__.py  __main__.py  cli.py  contracts.py  data.py  exceptions.py  log.py  naming.py  output.py  render.py  runner.py  typst_value.py
tests/: test_cli.py  test_contracts.py  test_data.py  test_naming.py  test_output.py  test_render.py  test_runner.py  test_typst_value.py
