[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mergetyp"
version = "0.1.0"
description = "Mail-merge and batch PDF generator powered by Typst."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "TBD" }]
keywords = ["typst", "pdf", "mail-merge", "batch", "template", "document"]
dependencies = [
    "pydantic>=2.8,<3",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.5",
    "types-PyYAML>=6.0",
]

[project.scripts]
mergetyp = "mergetyp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mergetyp = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["UP006", "UP007", "UP045"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
